# minline

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: workflow.yml
examples/: auto_back.py  basic.py  bot.py  hide_back.py  not_found.py  relative_routing.py  validation.py
minline/: __init__.py  app.py
minline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
minline/app/: core.py
minline/app/commands/: context.py  user_context.py
minline/components/activity/: menu.py
minline/components/buttons/: button.py
minline/core/: __init__.py  input_event.py  question.py
minline/languages/: en.json
minline/routing/: stack.py
minline/runtime/: language_manager.py  renderer.py
minline/session/: __init__.py  message_manager.py  redis_manager.py  sqlite.py
minline/ui/renderers/: __init__.py  base.py  date_picker.py  multi_choice.py  single_choice.py  text.py
minline/user_storage/: __init__.py  base.py  fs.py
minline/validation/: __init__.py  form.py  result.py  step.py  workflow.py
tests/: test_validation.py
