[project]
name = "minline"
version = "0.1.0"
description = "Menu-inline framework for Telegram bots"
authors = [
  { name="Bakdaulet", email="bakirullit@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "aiogram>=3.3",
    "redis>=5.0.0"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"